MyDemoOrg/force-app/main/default/objects/Band__c/Band__c.object-meta.xml
<CustomObject>
    <description>This keeps the tracks of the bands in the festival.</description>
    <label>Band</label>
    <nameField>
        <label>Band Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>