MyDemoOrg/force-app/main/default/objects/Band__c/fields/Genre__c.field-meta.xml
<CustomField>
    <fullName>Genre__c</fullName>
    <description>type of the music band plays</description>
    <label>Genre</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bossanova</fullName>
            </value>
            <value>
                <fullName>Electronic</fullName>
            </value>
            <value>
                <fullName>Folk</fullName>
            </value>
            <value>
                <fullName>Pop music</fullName>
            </value>
            <value>
                <fullName>Reggae</fullName>
            </value>
            <value>
                <fullName>Rock</fullName>
            </value>
            <value>
                <fullName>Salsa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>