MyDemoOrg/force-app/main/default/objects/Band__c/fields/Group_Members__c.field-meta.xml
<CustomField>
    <fullName>Group_Members__c</fullName>
    <description>total size of the band</description>
    <label>Group Members</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>