MyDemoOrg/force-app/main/default/objects/Band__c/fields/Headliner__c.field-meta.xml
<CustomField>
    <fullName>Headliner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checked means the band is headliner</description>
    <label>Headliner</label>
    <type>Checkbox</type>
</CustomField>