MyDemoOrg/force-app/main/default/objects/Band__c/fields/Needs_piano__c.field-meta.xml
<CustomField>
    <fullName>Needs_piano__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checked if the band needs piano</description>
    <label>Needs piano</label>
    <type>Checkbox</type>
</CustomField>