MyDemoOrg/force-app/main/default/objects/Band__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>phone number of the band for contact</description>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>