MyDemoOrg/force-app/main/default/objects/Band__c/fields/Twitter_Handle__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Handle__c</fullName>
    <description>data for twitter handling</description>
    <label>Twitter Handle</label>
    <length>18</length>
    <type>Text</type>
</CustomField>